# stealth-sales-coach

./: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  SUCCESS_REPORT.md  Stealth Sales Coach - Iterative Implementation Guide (Updated with Recommendations).md  TESTING_REPORT.md  TROUBLESHOOTING.md  audio_test.py  debug_coach.py  debug_transcription.py  debug_working.py  final_integrated_coach.py  fixed_coach.py  fixed_llm_coach.py  live_debug.py  live_display.py  main.py  monitor_coach.py  pyproject.toml  quick_audio_test.py  requirements.txt  run_sales_coach.py  simple_test.py  stable_coach.py  test_coaching.py  test_display_mock.py  test_llm.py  test_low_sensitivity.py  ultra_stable_coach.py  working_coach.py
.claude/: settings.json
.claude/hooks/: loadbundle.sh  log-read.sh  log-write.sh  prime.sh
config/: default.yaml  low_sensitivity.yaml
docs/examples/: sales_conversation_report.md
sales_coach/: __init__.py  cli.py  coach.py
sales_coach/src/audio/: capture.py  diarization.py  transcription.py  vad.py
sales_coach/src/llm/: coaching.py
sales_coach/src/models/: config.py  conversation.py
scripts/: download_models.py  setup_audio.py
tests/: test_audio.py  test_automation.py  test_integration.py  test_llm.py
